--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,6 @@ edition = "2021"
 clap = { version = "4.5.4", features = ["derive"] }
 glob = "0.3.1"
 regex = "1.10.4"
+reqwest = { version = "0.12.4", features = ["blocking", "json"] }
 serde = { version = "1.0.198", features = ["derive"] }
 serde_json = "1.0.116"
-tokio = "1.37.0"
