--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
 glob = "0.3.1"
+inquire = "0.7.5"
 regex = "1.10.4"
 reqwest = { version = "0.12.4", features = ["blocking", "json"] }
 serde = { version = "1.0.198", features = ["derive"] }
